# AWS-FIS-MCP

./: .gitignore  README.md  main.py  mcp_config.json  pyproject.toml
aws_fis_mcp/: server.py  tools.py
